implement main and footer

--- a/src/styles/blocks/header.less
+++ b/src/styles/blocks/header.less
@@ -19,7 +19,7 @@
     font-family: "Geometria", sans-serif;
     font-size: 69px;
     text-transform: uppercase;
-
+    text-align: center;
     color: #fff;
   }
   &__subtitle {
