--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -11,3 +11,4 @@
 @import url("./blocks/body-style.less");
 @import url("./blocks/header.less");
 @import url("./blocks/login-form.less");
+@import url("./blocks/footer.less");
