--- a/src/styles/blocks/footer.less
+++ b/src/styles/blocks/footer.less
@@ -3,14 +3,18 @@
   justify-content: center;
   padding: 25px;
   position: absolute;
-  left: 0;
   bottom: 0;
   width: 100%;
-  height: 80px;
   &__text {
     font-family: "Open sans", sans-serif;
     font-size: 12px;
     line-height: 20px;
-    color: #7e8a9c;
+    color: @color-grey;
+  }
+}
+
+@media (max-height: 900px) {
+  .footer {
+    position: relative;
   }
 }
