--- a/src/styles/blocks/header.less
+++ b/src/styles/blocks/header.less
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  height: 500px;
+  min-height: 500px;
   padding: 40px;
 
   background-image: linear-gradient(to right, rgba(162, 200, 232, 0.8), rgba(142, 182, 215, 0.8)), url("../images/hero.png");
@@ -26,5 +26,15 @@
     font-family: "Open Sans", sans-serif;
     font-size: 20px;
     color: #fff;
+  }
+}
+
+@media (max-width: 600px) {
+  .header {
+    padding: 0 10px 20px;
+    min-height: 400px;
+    &__title {
+      font-size: 40px;
+    }
   }
 }
