--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -8,6 +8,7 @@
   src: url(./fonts/OpenSans-Regular.woff);
 }
 
+@import url("./utils/variables.less");
 @import url("./blocks/body-style.less");
 @import url("./blocks/header.less");
 @import url("./blocks/login-form.less");
